Prepare next major version
- Remove deprecated classes
- Add support for simpler output consumption
- Remove dependency to commons-io by including the code in use directly
(still Apache License version 2.0)
- Rename some classes to follow the same standards everywhere